Test swagger documentation inline->inside the method without using a stuct
